--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,13 +4,16 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".Login">
+    tools:context=".Login"
+    android:background="@drawable/background">
 
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/username_text"/>
+        android:text="@string/username_text"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/idUsername"
@@ -22,7 +25,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/password_text"/>
+        android:text="@string/password_text"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <EditText
         android:id="@+id/idPassword"
@@ -33,18 +38,19 @@
 
     <Button
         android:id="@+id/bLogin"
-        android:text="@string/login_button_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        />
+        android:text="@string/login_button_text"
+        android:textSize="24sp" />
 
     <Button
         android:id="@+id/bRegisterLink"
-        android:text="@string/register_here_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="10dp"
-        />
+        android:text="@string/register_here_text"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
